force-app/main/default/objects/CTRCDDSanction__c.object
<CustomObject>
    <fields>
        <fullName>AKA__c</fullName>
        <label>As Known As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CTR CDD Sanction</relationshipLabel>
        <relationshipName>CTR_CDD_Sanction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateofBirth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FindingWeb__c</fullName>
        <label>Finding Web</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Found</fullName>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormerlyKnownAs__c</fullName>
        <label>Formerly Known As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoodQualityAKA__c</fullName>
        <label>Good Quality A.K.A.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDCardNo__c</fullName>
        <label>National Identification No</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IntegrationMessage__c</fullName>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntegrationStatus__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegalEntityRegisNo__c</fullName>
        <label>Legal Entity Registration No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListedOn__c</fullName>
        <label>Listed On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LowQualityAKA__c</fullName>
        <label>Low Quality A.K.A.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherInformation__c</fullName>
        <label>Other Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PassportNo__c</fullName>
        <label>Passport Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PlaceofBirth__c</fullName>
        <label>Place of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PositionType__c</fullName>
        <label>Position Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Shareholders</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferenceNo__c</fullName>
        <label>Reference No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestFormHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Form Header</label>
        <referenceTo>CTRRequestFormHeader__c</referenceTo>
        <relationshipLabel>CTR CDD Sanction</relationshipLabel>
        <relationshipName>CTR_CDD_Sanction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shareholders__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shareholders</label>
        <referenceTo>CTRShareholder__c</referenceTo>
        <relationshipLabel>CTR CDD Sanction</relationshipLabel>
        <relationshipName>CTR_CDD_Sanction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UNSanction</fullName>
                </value>
                <value>
                    <fullName>UNThailand</fullName>
                </value>
                <value>
                    <fullName>WebUN</fullName>
                </value>
                <value>
                    <fullName>WebUNEntities</fullName>
                </value>
                <value>
                    <fullName>GProcurement</fullName>
                </value>
                <value>
                    <fullName>WorldCheckOne</fullName>
                </value>
                <value>
                    <fullName>LedWebsite</fullName>
                </value>
                <value>
                    <fullName>WorldCheckOneCountry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>CTR CDD Sanction</label>
    <nameField>
        <label>CTR CDD Sanction Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>